processed/gerrit/txt/36321.txt
Change:     36321
Subject:    LU-12822 build: disable couple checks with gcc9
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36321
Change-Id:  I2aef8732d37e2616c64dca7bc654bab50d6234d6
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Alex Zhuravlev
Created:    2019-09-30 09:35:44.000000000
Updated:    2020-08-28 15:03:09.000000000
Patch Set:  3
Insertions: +49
Deletions:  -1
Comments:   2 (0 unresolved)

--- Reviewers ---
  REVIEWER: Alex Zhuravlev, James Simmons

--- Commit Message ---
LU-12822 build: disable couple checks with gcc9

namely address-of-packed-member and  missing-attributes

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I2aef8732d37e2616c64dca7bc654bab50d6234d6

--- Review History ---

--- Message (Alex Zhuravlev, 2019-09-30 09:35:44.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-09-30 09:39:06.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-09-30 09:42:32.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (jenkins, 2019-09-30 10:13:08.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/8856/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/68652/ : SUCCESS

--- Message (Autotest, 2019-09-30 10:14:45.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:45.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-2 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:45.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-1 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:46.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-1 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:46.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-2 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:46.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-3 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:47.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-4 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:47.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs-arm session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:47.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-zfs session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:47.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-4 session for build 68652.

--- Message (Autotest, 2019-09-30 10:14:48.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-3 session for build 68652.

--- Message (Alex Zhuravlev, 2019-11-16 05:53:14.000000000) ---
Patch Set 2: Patch Set 1 was rebased

--- Message (wc-checkpatch, 2019-11-16 05:55:29.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2019-11-16 06:39:05.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/9966/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/69753/ : SUCCESS

--- Message (Autotest, 2019-11-16 06:39:22.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-2 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:22.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-ldiskfs session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-3 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-1 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-1 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-2 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-4 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-zfs session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-3 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-4 session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-ldiskfs-arm session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:25.000000000) ---
Patch Set 2:

Trevis Autotest started optional review-dne-ssk session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:25.000000000) ---
Patch Set 2:

Trevis Autotest started optional review-dne-selinux session for build 69753.

--- Message (Autotest, 2019-11-16 06:39:26.000000000) ---
Patch Set 2:

Trevis Autotest started optional review-dne-selinux-ssk session for build 69753.

--- Message (James Simmons, 2019-11-16 18:48:02.000000000) ---
Patch Set 2: Code-Review-1

While this patch is fine for getting the lustre utilities to build the problem is in the UAPI headers. That means external applications like robin hood could break when building against the lustre libraries.  I did track down what is causing the breakage.

--- Message (Alex Zhuravlev, 2019-11-16 20:22:32.000000000) ---
Patch Set 2:

I need patch like this just to be able to build Lustre on Fedora30 and I'm fine with any better replacement.

--- Message (Quentin Bouget, 2019-12-12 12:03:22.000000000) ---
Patch Set 2: Code-Review-1

(2 comments)

--- Message (James Simmons, 2019-12-13 16:59:24.000000000) ---
Patch Set 2:

I do have an updated fix but it will collide with LU-12984 which is in master-next. Once it lands I will update my patch.

--- Message (wc-checkpatch, 2020-01-03 00:25:46.000000000) ---
Patch Set 2: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.

--- Message (James Simmons, 2020-01-28 19:33:15.000000000) ---
Patch Set 2:

can be abandoned.

--- Message (James Simmons, 2020-01-28 19:33:16.000000000) ---
Removed the following votes:

* Code-Review-1 by James Simmons <jsimmons@infradead.org>

--- Message (Alex Zhuravlev, 2020-02-28 07:51:03.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2020-02-28 07:51:08.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-02-28 07:56:35.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (Autotest, 2020-02-28 09:44:18.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-ldiskfs session for build 72265.

--- Message (Autotest, 2020-02-28 09:44:38.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-zfs session for build 72265.

--- Message (Autotest, 2020-02-28 09:44:58.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-dne-part-1 session for build 72265.

--- Message (Autotest, 2020-02-28 09:45:18.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-dne-part-3 session for build 72265.

--- Message (Autotest, 2020-02-28 09:45:48.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-dne-part-4 session for build 72265.

--- Message (Autotest, 2020-02-28 09:45:59.000000000) ---
Patch Set 3:

Onyx Autotest started enforced review-dne-zfs-part-1 session for build 72265.

--- Message (Autotest, 2020-02-28 09:46:08.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-dne-zfs-part-2 session for build 72265.

--- Message (Autotest, 2020-02-28 09:46:20.000000000) ---
Patch Set 3:

Onyx Autotest started enforced review-dne-zfs-part-3 session for build 72265.

--- Message (Autotest, 2020-02-28 09:46:29.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-dne-zfs-part-4 session for build 72265.

--- Message (Autotest, 2020-02-28 09:46:40.000000000) ---
Patch Set 3:

Onyx Autotest started enforced review-ldiskfs-arm session for build 72265.

--- Message (Autotest, 2020-02-28 09:46:49.000000000) ---
Patch Set 3:

Trevis Autotest2 started optional review-dne-selinux session for build 72265.

--- Message (Autotest, 2020-02-28 09:51:18.000000000) ---
Patch Set 3:

AT Release Candidate started enforced review-dne-part-2 session for build 72265.

--- Message (jenkins, 2020-02-28 12:13:59.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/12385/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/72265/ : SUCCESS

--- Message (James Simmons, 2020-02-28 15:13:38.000000000) ---
Patch Set 3:

Time to give the fight :-(

--- Message (Andreas Dilger, 2020-08-28 04:49:43.000000000) ---
Abandoned

This was fixed properly with https://review.whamcloud.com/36798

--- Message (Alex Zhuravlev, 2020-08-28 15:03:09.000000000) ---
Patch Set 3:

> This was fixed properly with https://review.whamcloud.com/36798
hmm, not quite:
In file included from /home/lustre/master-mine/ldiskfs/super.c:20:
include/linux/module.h:132:6: error: ‘init_module’ specifies less restrictive attribute than its target ‘ldiskfs_init_fs’: ‘cold’ [-Werror=missing-attributes]
  132 |  int init_module(void) __attribute__((alias(#initfn)));
      |      ^~~~~~~~~~~
